# https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/

[build-system]
# PEP 518 https://www.python.org/dev/peps/pep-0518/
# https://discuss.python.org/t/help-testing-experimental-features-in-setuptools/13821
requires = [
  "setuptools>=64",
  "wheel",               # for bdist package distribution
  "setuptools_scm>=6.4", # for automated versioning
]

# PEP 517 https://peps.python.org/pep-0517/
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["earthshook-api"]
# include = []
# exclude = ["tests"]
namespaces = true

[tool.setuptools_scm]
write_to = "src/earthshook/_version.py"

# PEP 621 https://peps.python.org/pep-0621/
[project]
name = "earthshook"
# version = "2.0.0"
# for automated versioning by pypa/setuptools_scm. see https://peps.python.org/pep-0621/#dynamic
dynamic = ["version"]
description = "Posts earthquakes reported by USGS to social media."
authors = [{ name = "bbaugh" }, { email = "bbaugh0@gmail.com" }]
maintainers = [{ name = "bbaugh" }, { email = "bbaugh0@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.7"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
]
keywords = ["package", "setuptools"]
dependencies = ["requests", "Mastodon.py"]
[project.optional-dependencies]
dev = ["pytest==5.0.0", "pytest-cov[all]", "mypy==0.910", "black==21.10b0"]
[project.urls]
Homepage = "https://github.com/bbaugh/earthshook"
documentation = "https://github.com/bbaugh/earthshook"
repository = "https://github.com/bbaugh/earthshook"
changelog = "https://github.com/bbaugh/earthshook/blob/main/CHANGELOG.md"

[tool.black]
target-version = ['py310']
line-length = 120

[tool.mypy]
python_version = "3.10"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true